--- a/Level 4/Task 7/src/index.html
+++ b/Level 4/Task 7/src/index.html
@@ -58,7 +58,7 @@
     <div class="container mx-auto py-16">
       <div class="flex flex-col items-center justify-center">
           <h1 class="text-4xl font-bold text-gray-800 mb-7">My Portfolio</h1>
-          <img src="profile.png" alt="Your Profile Picture" class="w-48 h-48 rounded-full mb-4 shadow-lg mb-6">
+          <img src="profile.png" alt="Your Profile Picture" class="w-48 h-48 rounded-full  shadow-lg mb-6">
           <h1 class="text-3xl font-bold ">Ashutosh Kumar Jha</h1>
           <h1 class="text-xl font-semibold mb-10">Frontend Developer</h1>
           <p class="text-lg text-gray-700 text-center mb-9" >
